--- a/escolar/core/templates/index.html
+++ b/escolar/core/templates/index.html
@@ -39,6 +39,7 @@
                         <li><a href="#section-team">Equipe</a></li>
                         <li><a href="#section-works">Parceiros</a></li>
                         <li><a href="#section-contact">Contact</a></li>
+                        <li><a href="#section-login">Login</a></li>
                     </ul>
                 </div><!--/.navbar-collapse -->
             </div>
@@ -371,27 +372,27 @@
                             </div>
                             <form action="contact/contact.php" method="post" role="form" class="contactForm">
                               <div class="form-group">
-                                <label for="name">Your Name</label>
-                                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="maxlen:4" data-msg="Please enter at least 4 chars" />
+                                <label for="name">Seu Nome</label>
+                                <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" data-rule="maxlen:4" data-msg="Please enter at least 4 chars" />
                                 <div class="validation"></div>
                               </div>
                               <div class="form-group">
-                                <label for="email">Your Email</label>
-                                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                                <label for="email">Seu email</label>
+                                <input type="email" class="form-control" name="email" id="email" placeholder="Seu email" data-rule="email" data-msg="Please enter a valid email" />
                                 <div class="validation"></div>
                               </div>
                               <div class="form-group">
-                                <label for="subject">Subject</label>
-                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="maxlen:4" data-msg="Please enter at least 8 chars of subject" />
+                                <label for="subject">Assunto</label>
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="maxlen:4" data-msg="Please enter at least 8 chars of subject" />
                                 <div class="validation"></div>
                               </div>
                               <div class="form-group">
-                                <label for="message">Message</label>
+                                <label for="message">Mensagem</label>
                                 <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us"></textarea>
                                 <div class="validation"></div>
                               </div>
                               
-                              <button type="submit" class="btn btn-theme pull-left">SEND MESSAGE</button>
+                              <button type="submit" class="btn btn-theme pull-left">ENVIAR</button>
                             </form>
 
                         </div>
@@ -401,9 +402,43 @@
                 
             </div>
         </section>
-        <!-- map -->
-        <section id="section-map" class="clearfix">
-            <div id="map"></div>
+        <!-- contact -->
+        <section id="section-login" class="section appear clearfix">
+            <div class="container">
+                
+                <div class="row mar-bot40">
+                    <div class="col-md-offset-3 col-md-6">
+                        <div class="section-header">
+                            <h2 class="section-heading animated" data-animation="bounceInUp">Login</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <div class="cform" id="contact-form">
+                            <div id="sendmessage">
+                                 Your message has been sent. Thank you!
+                            </div>
+                            <form action="contact/contact.php" method="post" role="form" class="contactForm">
+                              <div class="form-group">
+                                <label for="name">Username</label>
+                                <input type="text" name="name" class="form-control" id="name" placeholder="Username" data-rule="maxlen:4" data-msg="Please enter at least 4 chars" />
+                                <div class="validation"></div>
+                              </div>
+                              <div class="form-group">
+                                <label for="email">password</label>
+                                <input type="email" class="form-control" name="email" id="email" placeholder="********" data-rule="email" data-msg="Please enter a valid email" />
+                                <div class="validation"></div>
+                              </div>
+                              <button type="submit" class="btn btn-theme pull-left">ENTRAR</button>
+                            </form>
+
+                        </div>
+                    </div>
+                    <!-- ./span12 -->
+                </div>
+                
+            </div>
         </section>
         
     <section id="footer" class="section footer">
