ref #2 template doi login, testes para login, urls login, link no index p o loginremove file core.tests.py os testes estão na pasta cores.testes

--- a/escolar/core/templates/index.html
+++ b/escolar/core/templates/index.html
@@ -39,7 +39,7 @@
                         <li><a href="#section-team">Equipe</a></li>
                         <li><a href="#section-works">Parceiros</a></li>
                         <li><a href="#section-contact">Contact</a></li>
-                        <li><a href="#section-login">Login</a></li>
+                        <li><a href="{% url 'login' %}">Login</a></li>
                     </ul>
                 </div><!--/.navbar-collapse -->
             </div>
