--- a/escolar/core/templates/index.html
+++ b/escolar/core/templates/index.html
@@ -30,7 +30,7 @@
                     <h1><a class="navbar-brand" 
                            href="."
                            data-0="line-height:90px;"
-                           data-300="line-height:50px;">DK</a></h1>
+                           data-300="line-height:50px;">Bolt</a></h1>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav" data-0="margin-top:20px;" data-300="margin-top:5px;">
