ref #3 templates básicos com o layout do Bolt

--- a/escolar/core/templates/400.html
+++ b/escolar/core/templates/400.html
@@ -49,10 +49,11 @@
                         <div class="align-center">
                             <!-- <i class="fa fa-flask fa-5x mar-bot20"></i> -->
                             <i class="fa fa-bolt fa-5x mar-bot20"></i>
-                            <h2 class="slogan">404</h2>
-                            <h2>Página não encontrada</h2>
+                            <h2 class="slogan">400</h2>
+                            <h2>Requisição imprópria</h2>
 
-                            <p>O endereço que você solicitou não existe.</p>
+                            <p>A requisição enviada não pode ser atendida</p>
+
                         </div>
                     </div>
                 </div>
