ref #3 block title para os templates de erro

--- a/escolar/core/templates/404.html
+++ b/escolar/core/templates/404.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
-
+{% block title %}404. Página não encontrada{% endblock title %}
 {% block content %}
         <section class="featured">
             <div class="container"> 
