--- a/escolar/core/templates/login.html
+++ b/escolar/core/templates/login.html
@@ -1,4 +1,4 @@
-
+{% extends 'base.html'%}
 {% block extra_css %}
 <style type="text/css">
     body {
@@ -39,7 +39,7 @@
         min-width: 200px;
     }
 </style>
-{% endblock extra_css %}
+{% endblock extra_css %} 
 
 {% block page_title %}Login{% endblock page_title %}
 
