--- a/escolar/core/templates/400.html
+++ b/escolar/core/templates/400.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
-
+{% block title %}400. Requisição imprópria{% endblock title %}
 {% block content %}
 
         <section class="featured">
