--- a/escolar/core/templates/403.html
+++ b/escolar/core/templates/403.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
-
+{% block title %}403. Proibido{% endblock title %}
 {% block content %}
         <section class="featured">
             <div class="container"> 
