--- a/escolar/core/templates/500.html
+++ b/escolar/core/templates/500.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
-
+{% block title %}500. Erro interno inesperado{% endblock title %}
 {% block content %}
 
         <section class="featured">
