--- a/escolar/core/templates/base.html
+++ b/escolar/core/templates/base.html
@@ -1,45 +1,44 @@
 {% load static %}
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <!-- BASICS -->
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Bolt</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="static/css/isotope.css" media="screen" /> 
-        <link rel="stylesheet" href="static/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
-        <link rel="stylesheet" href="static/css/bootstrap.css">
-        <link rel="stylesheet" href="static/css/bootstrap-theme.css">
-        <link rel="stylesheet" href="static/css/style.css">
-        <!-- skin -->
-        <link rel="stylesheet" href="static/skin/default.css">
-    </head>
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+  <title>Bolt</title>
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="static/img/favicon.ico">
+
+  <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="static/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+</head>
      
     <body>
-        <section id="header" class="appear"></section>
-        <div class="navbar navbar-fixed-top" role="navigation" data-0="line-height:100px; height:100px; background-color:rgba(0,0,0,0.3);" data-300="line-height:60px; height:60px; background-color:rgba(0,0,0,1);">
-             <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="fa fa-bars color-white"></span>
-                    </button>
-                    <h1><a class="navbar-brand" 
-                           href="."
-                           data-0="line-height:90px;"
-                           data-300="line-height:50px;">Bolt</a></h1>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav" data-0="margin-top:20px;" data-300="margin-top:5px;">
-                        <li class="active"><a href=".">Home</a></li>
-                    </ul>
-                </div><!--/.navbar-collapse -->
-            </div>
-        </div>
+      <nav class="white" role="navigation">
+    <div class="nav-wrapper container">
+      <a id="logo-container" href="#" class="brand-logo orange-text"><i class="material-icons">flash_on</i>Bolt</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#">Navbar Link</a></li>
+        <li><a href="#section-services">Serviços</a></li>
+        <li><a href="#section-team">Equipe</a></li>
+        <li><a href="#section-works">Parceiros</a></li>
+        <li><a href="#section-contact">Contact</a></li>
+        <li><a href="{% url 'login' %}">Login</a></li>
+      </ul>
+
+      <ul id="nav-mobile" class="side-nav">
+        <li><a href="#">Navbar Link</a></li>
+        <li><a href="#section-services">Serviços</a></li>
+        <li><a href="#section-team">Equipe</a></li>
+        <li><a href="#section-works">Parceiros</a></li>
+        <li><a href="#section-contact">Contact</a></li>
+        <li><a href="{% url 'login' %}">Login</a></li>
+      </ul>
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+    </div>
+  </nav>
+  
 {% block extra_css %}{% endblock extra_css %}
 {% block content %}
 {% endblock content %}
