--- a/escolar/core/templates/index.html
+++ b/escolar/core/templates/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Parallax Template - Materialize</title>
+  <title>Bolt</title>
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="static/img/favicon.ico">
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,8 +17,6 @@
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo orange-text"><i class="material-icons">flash_on</i>Bolt</a>
-      <!-- <a href="#!" class="brand-logo"><i class="material-icons">cloud</i>Logo</a> -->
-      <!-- <h2 class="center orange-text"><i class="material-icons">flash_on</i></h2> -->
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Navbar Link</a></li>
         <li><a href="#section-services">Serviços</a></li>
@@ -42,12 +42,12 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
+        <h1 class="header center teal-text text-lighten-2">Bolt</h1>
         <div class="row center">
           <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
         </div>
         <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+          <a href="#" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
         </div>
         <br><br>
 
