ref #5 colocando conteúdo mais significativo

--- a/escolar/core/templates/index.html
+++ b/escolar/core/templates/index.html
@@ -65,10 +65,15 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center orange-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h5 class="center">Calendário de aulas</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-          </div>
+            <p class="light"></p>
+            <ul>
+              <li>Datas das provas por sala de aula</li>
+              <li>Datas dos compromissos financeiros dos Responsáveis dos alunos</li>
+              <li>Envios de alertas para os responsáveis</li>
+            </ul>
+         </div>
         </div>
 
         <div class="col s12 m4">
