--- a/escolar/core/templates/index.html
+++ b/escolar/core/templates/index.html
@@ -64,10 +64,10 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center orange-text"><i class="material-icons">flash_on</i></h2>
+            <h2 class="center brown-text"><i class="material-icons">perm_contact_calendar</i></h2>
             <h5 class="center">Calendário de aulas</h5>
 
-            <p class="light"></p>
+            <p class="light">Gestão do calendário on line, acesso de qualquer lugar</p>
             <ul>
               <li>Datas das provas por sala de aula</li>
               <li>Datas dos compromissos financeiros dos Responsáveis dos alunos</li>
@@ -79,18 +79,31 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h5 class="center">Agenda do Aluno</h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light">Comunicação rápida, direta, multiusuário</p>
+            <ul>
+              <li>Mensagem simultânea para todos os alunos</li>
+              <li>Mensagem para grupos de alunos</li>
+              <li>Mensagem simultânea para todos responsáveis de alunos</li>
+              <li>Mensagem para grupos de responsáveis por alunos</li>
+            </ul>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <h5 class="center">Arquivos</h5>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light">Acesso aos dados de onde você estiver</p>
+            <ul>
+              <li>Exercícios</li>
+              <li>Cadastro de alunos</li>
+              <li>Notas</li>
+              <li>Faltas</li>
+              <li>Atividades</li>
+            </ul>
           </div>
         </div>
       </div>
