ref #5 botão para login

--- a/escolar/core/templates/index.html
+++ b/escolar/core/templates/index.html
@@ -23,7 +23,7 @@
         <li><a href="#section-team">Equipe</a></li>
         <li><a href="#section-works">Parceiros</a></li>
         <li><a href="#section-contact">Contact</a></li>
-        <li><a href="{% url 'login' %}">Login</a></li>
+        <li><a href="{% url 'login' %}" class="waves-effect waves-light btn">Login</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
@@ -32,7 +32,7 @@
         <li><a href="#section-team">Equipe</a></li>
         <li><a href="#section-works">Parceiros</a></li>
         <li><a href="#section-contact">Contact</a></li>
-        <li><a href="{% url 'login' %}">Login</a></li>
+        <li><a href="{% url 'login' %}" class="waves-effect waves-light btn">Login</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
