--- a/escolar/core/templates/base.html
+++ b/escolar/core/templates/base.html
@@ -24,7 +24,7 @@
         <li><a href="#section-team">Equipe</a></li>
         <li><a href="#section-works">Parceiros</a></li>
         <li><a href="#section-contact">Contact</a></li>
-        <li><a href="{% url 'login' %}">Login</a></li>
+        <li><a href="{% url 'login' %}" class="waves-effect waves-light btn">Login</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
