--- a/escolar/core/templates/index.html
+++ b/escolar/core/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Bolt</title>
+  <title>DK</title>
   <!-- Favicon -->
   <link rel="shortcut icon" href="static/img/favicon.ico">
 
@@ -16,7 +16,7 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo orange-text"><i class="material-icons">flash_on</i>Bolt</a>
+      <a id="logo-container" href="#" class="brand-logo orange-text">DK</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Navbar Link</a></li>
         <li><a href="#section-services">Serviços</a></li>
@@ -42,12 +42,12 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Bolt</h1>
+        <h1 class="header center teal-text text-lighten-2">DK</h1>
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">Acesso</h5>
         </div>
         <div class="row center">
-          <a href="#" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+          <!-- <a href="#" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a> -->
         </div>
         <br><br>
 
@@ -112,7 +112,7 @@
   </div>
 
 
-  <div class="parallax-container valign-wrapper">
+<!--   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
@@ -135,10 +135,10 @@
       </div>
 
     </div>
-  </div>
+  </div> -->
 
 
-  <div class="parallax-container valign-wrapper">
+ <!--  <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
@@ -147,12 +147,12 @@
       </div>
     </div>
     <div class="parallax"><img src="static/img/background3.jpg" alt="Unsplashed background img 3"></div>
-  </div>
+  </div> -->
 
   <footer class="page-footer teal">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
+     <!--    <div class="col l6 s12">
           <h5 class="white-text">Company Bio</h5>
           <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
 
@@ -175,14 +175,14 @@
             <li><a class="white-text" href="#!">Link 3</a></li>
             <li><a class="white-text" href="#!">Link 4</a></li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
-    <div class="footer-copyright">
+<!--     <div class="footer-copyright">
       <div class="container">
       Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
       </div>
-    </div>
+    </div> -->
   </footer>
 
 
