ref #2 template login com materialize

--- a/escolar/core/templates/base.html
+++ b/escolar/core/templates/base.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Bolt</title>
+  <title>DK</title>
   <!-- Favicon -->
   <link rel="shortcut icon" href="static/img/favicon.ico">
 
@@ -17,9 +17,8 @@
     <body>
       <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo orange-text"><i class="material-icons">flash_on</i>Bolt</a>
+      <a id="logo-container" href="#" class="brand-logo orange-text"><i class="material-icons">flash_on</i>DK</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
         <li><a href="#section-services">Serviços</a></li>
         <li><a href="#section-team">Equipe</a></li>
         <li><a href="#section-works">Parceiros</a></li>
@@ -28,7 +27,6 @@
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Navbar Link</a></li>
         <li><a href="#section-services">Serviços</a></li>
         <li><a href="#section-team">Equipe</a></li>
         <li><a href="#section-works">Parceiros</a></li>
