ref #6 refatora urls, primeiro teste de listagem das escolas, ainda sem acertar o uso do meterialize

--- a/escolar/core/templates/403.html
+++ b/escolar/core/templates/403.html
@@ -10,7 +10,7 @@
                             <!-- <i class="fa fa-flask fa-5x mar-bot20"></i> -->
                             <i class="fa fa-bolt fa-5x mar-bot20"></i>
                             <h2 class="slogan">403</h2>
-                            <h2>Prooibido</h2>
+                            <h2>Proibido</h2>
 
                             <p>Você não tem permissão para acessar esse emdereço.</p>
                         </div>
