ref #6 usando informações do BD

--- a/escolar/escolas/templates/escolas/escolas_list.html
+++ b/escolar/escolas/templates/escolas/escolas_list.html
@@ -13,26 +13,14 @@
         </thead>
 
         <tbody>
+        {% for escola in escolas %}
           <tr>
-            <td>Alvin</td>
-            <td>Eclair</td>
-            <td>$0.87</td>
+            <td>{{ escola.nome }}</td>
+            <td>{{ escola.endereco }}</td>
+            <td>{{ escola.telefone }}</td>
+            <td>{{ escola.status|default:"--" }}</td>
           </tr>
-          <tr>
-            <td>Alan</td>
-            <td>Jellybean</td>
-            <td>$3.76</td>
-          </tr>
-          <tr>
-            <td>Jonathan</td>
-            <td>Lollipop</td>
-            <td>$7.00</td>
-          </tr>
-        <tr>
-            <td>Jonathan</td>
-            <td>Lollipop</td>
-            <td>$7.00</td>
-          </tr>
+        {% endfor %}
         </tbody>
       </table>
 {% endblock content %}
