ref #6 listagem de escolas, idt oproblema que falha no uso do css do materialize

--- a/escolar/escolas/templates/escolas/escolas_list.html
+++ b/escolar/escolas/templates/escolas/escolas_list.html
@@ -1,7 +1,8 @@
 {% extends 'base.html'%}
 {% block title %}Escolas{% endblock title %}
 {% block content %}
-        <h1>Eslcolas</h1>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+
 <table>
         <thead>
           <tr>
