ref #3 index extend o base, acrescenta um link para o css do materialize no base

--- a/escolar/core/templates/base.html
+++ b/escolar/core/templates/base.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
   <title>DK</title>
   <!-- Favicon -->
-  <link rel="shortcut icon" href="static/img/favicon.ico">
+  <!-- <link rel="shortcut icon" href="static/img/favicon.ico"> -->
 
   <!-- CSS  -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="static/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -17,7 +18,7 @@
     <body>
       <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo orange-text"><i class="material-icons">flash_on</i>DK</a>
+      <a id="logo-container" href="#" class="brand-logo green-text"><i class="material-icons">flash_on</i>DK</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#section-services">Serviços</a></li>
         <li><a href="#section-team">Equipe</a></li>
