--- a/escolar/core/templates/index.html
+++ b/escolar/core/templates/index.html
@@ -1,43 +1,6 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>DK</title>
-  <!-- Favicon -->
-  <link rel="shortcut icon" href="static/img/favicon.ico">
+{% extends 'base.html'%}
 
-  <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="static/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-</head>
-<body>
-  <nav class="white" role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo orange-text">DK</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
-        <li><a href="#section-services">Serviços</a></li>
-        <li><a href="#section-team">Equipe</a></li>
-        <li><a href="#section-works">Parceiros</a></li>
-        <li><a href="#section-contact">Contact</a></li>
-        <li><a href="{% url 'login' %}" class="waves-effect waves-light btn">Login</a></li>
-      </ul>
-
-      <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Navbar Link</a></li>
-        <li><a href="#section-services">Serviços</a></li>
-        <li><a href="#section-team">Equipe</a></li>
-        <li><a href="#section-works">Parceiros</a></li>
-        <li><a href="#section-contact">Contact</a></li>
-        <li><a href="{% url 'login' %}" class="waves-effect waves-light btn">Login</a></li>
-      </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
-
+{% block content %}
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
       <div class="container">
@@ -50,7 +13,6 @@
           <!-- <a href="#" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a> -->
         </div>
         <br><br>
-
       </div>
     </div>
     <div class="parallax"><img src="static/img/background1.jpg" alt="Unsplashed background img 1"></div>
@@ -191,5 +153,4 @@
   <script src="static/js/materialize.js"></script>
   <script src="static/js/init.js"></script>
 
-  </body>
-</html>
+{% endblock content %}
