--- a/escolar/core/templates/login.html
+++ b/escolar/core/templates/login.html
@@ -51,7 +51,7 @@
       <div class="container">
         <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
 
-          <form class="col s12" method="post">
+          <form class="col s12" method="post" action="{% if next %}?next={% url 'escolas_list'%}{% endif %}">
             {% csrf_token %}
             <div class='row'>
               <div class='col s12'>
