--- a/escolar/core/templates/login.html
+++ b/escolar/core/templates/login.html
@@ -51,13 +51,19 @@
       <div class="container">
         <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
 
+            {% if form.errors %}
+                <label style='float: right;'>
+                    <p>Senha ou usuário incorretos</p>
+                    <p>O sistema diferencia maiuśculas de minúsculas.</p>
+                    <a class='pink-text' href='#'><b>Esqueceu a senha?</b></a>
+              </label>
+            {% endif %}
           <form class="col s12" method="post" action="{% if next %}?next={% url 'escolas_list'%}{% endif %}">
             {% csrf_token %}
             <div class='row'>
               <div class='col s12'>
               </div>
             </div>
-
             <div class='row'>
               <div class='input-field col s12'>
                {{ form.username }}
@@ -70,9 +76,9 @@
                 {{ form.password }}
                 <label for='password'>password</label>
               </div>
-              <label style='float: right;'>
-                    <a class='pink-text' href='#!'><b>Esqueceu a senha?</b></a>
-              </label>
+             <!--  <label style='float: right;'>
+                    <a class='pink-text' href='#'><b>Esqueceu a senha?</b></a>
+              </label> -->
             </div>
 
             <br />
