--- a/escolar/core/templates/base.html
+++ b/escolar/core/templates/base.html
@@ -20,7 +20,7 @@
     <body>
       <nav class="white" role="navigation">
         <div class="nav-wrapper container">
-          <a id="logo-container" href="#" class="brand-logo green-text"><i class="material-icons">flash_on</i>DK</a>
+          <a id="logo-container" href="{% url 'home' %}" class="brand-logo green-text"><i class="material-icons">flash_on</i>DK</a>
           <ul class="right hide-on-med-and-down">
             {% if request.user.is_anonymous %}
             <li><a href="#section-services"><font color='grey'>Serviços</font></a></li>
@@ -29,21 +29,26 @@
             <li><a href="#section-contact"><font color='grey'>Contato</font></a></li>
               <li><a href="{% url 'login' %}" class="waves-effect waves-light btn">LogIn</a></li>
             {% else %}
-              <li><a href="{% url 'escolas_list' %}"><font color='grey'>Escolas</font></a></li>
-              <li><a href="#"><font color='grey'>{{ request.user }}</font></a></li>
+              <li><a href="{% url 'escolas_list' %}"><font color='grey'>Administração</font></a></li>
+              <li><a href="#"><font color='grey'>Comunicação</font></a></li>
+              <li><a href="#"><font color='grey'>Conteúdo</font></a></li>
+              <li><a href="#"><font color='grey'><i class="material-icons">perm_identity</i></font></a></li>
               <li><a href="{% url 'logout' %}" class="waves-effect waves-light btn">LogOut</a></li>
             {% endif %}
           </ul>
 
           <ul id="nav-mobile" class="side-nav">
-            <li><a href="#section-services"><font color='grey'>Serviços</font></a></li>
-            <li><a href="#section-team"><font color='grey'>Equipe</a></font></li>
-            <li><a href="#section-works"><font color='grey'>Parceiros</font></a></li>
-            <li><a href="#section-contact"><font color='grey'>Contato</font></a></li>
             {% if request.user.is_anonymous %}
+              <li><a href="#section-services"><font color='grey'>Serviços</font></a></li>
+              <li><a href="#section-team"><font color='grey'>Equipe</a></font></li>
+              <li><a href="#section-works"><font color='grey'>Parceiros</font></a></li>
+              <li><a href="#section-contact"><font color='grey'>Contato</font></a></li>
               <li><a href="{% url 'login' %}" class="waves-effect waves-light btn">LogIn</a></li>
             {% else %}
-              <li><a href="{% url 'escolas_list' %}"><font color='grey'>Escolas</font></a></li>
+              <li><a href="{% url 'escolas_list' %}"><font color='grey'>Administração</font></a></li>
+              <li><a href="#"><font color='grey'>Comunicação</font></a></li>
+              <li><a href="#"><font color='grey'>Conteúdo</font></a></li>
+              <li><a href="#"><font color='grey'><i class="material-icons">perm_identity</i></font></a></li>
               <li><a href="{% url 'logout' %}" class="waves-effect waves-light btn">LogOut</a></li>
             {% endif %}
           </ul>
