--- a/escolar/escolas/templates/escolas/escolas_list.html
+++ b/escolar/escolas/templates/escolas/escolas_list.html
@@ -4,34 +4,37 @@
 
 {% block content %}
 <section class="featured">
-    <div class="container"> 
-        <div class="row mar-bot40">
-            <div class="col-md-6 col-md-offset-3">
-                <div class="align-center">
-                <table class="striped">
-                    <thead>
-                      <tr>
-                          <th data-field="id">Escola</th>
-                          <th data-field="name">Endereço</th>
-                          <th data-field="price">Telefone</th>
-                          <th data-field="price">Status</th>
-                      </tr>
-                    </thead>
+  <div class="container">
+      <p>Aqui o sub menu</p>
+  </div>
+  <div class="container"> 
+      <div class="row mar-bot40">
+          <div class="col-md-6 col-md-offset-3">
+              <div class="align-center">
+              <table class="striped">
+                  <thead>
+                    <tr>
+                        <th data-field="id">Escola</th>
+                        <th data-field="name">Endereço</th>
+                        <th data-field="price">Telefone</th>
+                        <th data-field="price">Status</th>
+                    </tr>
+                  </thead>
 
-                    <tbody>
-                    {% for escola in escolas %}
-                      <tr>
-                        <td>{{ escola.nome }}</td>
-                        <td>{{ escola.endereco }}</td>
-                        <td>{{ escola.telefone }}</td>
-                        <td>{{ escola.status|default:"--" }}</td>
-                      </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-                </div>
-            </div>
-        </div>
-    </div>
+                  <tbody>
+                  {% for escola in escolas %}
+                    <tr>
+                      <td>{{ escola.nome }}</td>
+                      <td>{{ escola.endereco }}</td>
+                      <td>{{ escola.telefone }}</td>
+                      <td>{{ escola.status|default:"--" }}</td>
+                    </tr>
+                  {% endfor %}
+                  </tbody>
+              </table>
+              </div>
+          </div>
+      </div>
+  </div>
 </section>
 {% endblock content %}
