--- a/escolar/escolas/templates/escolas/escolas_list.html
+++ b/escolar/escolas/templates/escolas/escolas_list.html
@@ -28,7 +28,7 @@
       <tbody>
       {% for escola in escolas %}
         <tr>
-          <td>{{ escola.nome }}</td>
+          <td> <a href="{% url 'escola_form' escola.pk %}">{{ escola.nome }}</a></td>
           <td>{{ escola.endereco }}</td>
           <td>{{ escola.telefone|default:"--" }}</td>
           <td>{{ escola.get_status|yesno:'ativo,inativo' }}</td>
