--- a/escolar/escolas/templates/escolas/escola_form.html
+++ b/escolar/escolas/templates/escolas/escola_form.html
@@ -5,12 +5,7 @@
 {% block content %}
 
 <div class="container">
-  <ul class="nav nav-tabs">
-    <li><a href="{% url 'escolas_list' %}" id='escola' data-toggle="tab">Escola</a></li>
-    <li><a href="#classes" data-toggle="tab">Classes</a></li>
-    <li><a href="#professores" data-toggle="tab">Professores</a></li>
-    <li><a href="#alunos" data-toggle="tab">Alunos</a></li>
-  </ul>
+   {% include "base_adm.html" %}
 
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
