ref #6 reiniciando modelos ...

--- a/escolar/core/templates/base_adm.html
+++ b/escolar/core/templates/base_adm.html
@@ -1,6 +1,6 @@
 <ul class="nav nav-tabs">
     <li><a href="{% url 'escolas_list' %}" id='escola' data-toggle="tab">Escola</a></li>
-    <li><a href="{% url 'grupos_list' %}" id='escola' data-toggle="tab">Grupos</a></li>
+    <li><a href="#" id='escola' data-toggle="tab">Grupos</a></li>
     <li><a href="#classes" data-toggle="tab">Classes</a></li>
     <li><a href="#professores" data-toggle="tab">Professores</a></li>
     <li><a href="#alunos" data-toggle="tab">Alunos</a></li>
