ref #9 auth.group e core.usergrupos

--- a/escolar/escolas/templates/escolas/grupo_form.html
+++ b/escolar/escolas/templates/escolas/grupo_form.html
@@ -12,7 +12,7 @@
     <div class="row-fluid">
         <div class="controls cwell">
             <div class="row-fluid">
-                {{ form.nome|as_bootstrap }}
+                {{ form.name|as_bootstrap }}
             </div>
         </div>
         <div class="form-actions">
