--- a/escolar/escolas/templates/escolas/grupos_list.html
+++ b/escolar/escolas/templates/escolas/grupos_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
 
-{% block title %}Grupos{% endblock title %}
+{% block page_title %}Grupos{% endblock page_title %}
 
 {% block content %}
 
@@ -11,21 +11,19 @@
   <table class="table table-striped">
       <caption>
          <div style="float:right; margin-right:10px">
-            <a href="{% url 'grupo_form' escola.pk %}" class="btn btn-mini btn-success">Novo Grupo</a>
+            <a href="{% url 'grupo_form' %}" class="btn btn-mini btn-success">Novo Grupo</a>
          </div>
       </caption>
       <thead>
         <tr>
             <th>Grupo</th>
-            <th>Escola</th>
         </tr>
       </thead>
 
       <tbody>
       {% for grupo in grupos %}
         <tr>
-          <td> <a href="{% url 'grupo_form' grupo.escola.pk grupo.pk %}">{{ grupo.grupo.nome }}</a></td>
-          <td>{{ grupo.grupo.escola.nome }}</td>
+          <td> <a href="{% url 'grupo_form' grupo.pk %}">{{ grupo.name }}</a></td>
         </tr>
       {% empty %}
             Nenhum grupo encontrado
