ref #13 redirecionamentos funcionando; verificar porque não está rolando as mgss e não está criando o user sem grupo e sem escola

--- a/escolar/core/templates/base_adm.html
+++ b/escolar/core/templates/base_adm.html
@@ -1,5 +1,6 @@
 <ul class="nav nav-tabs">
     <li><a href="{% url 'escolas_list' %}" id='escola' data-toggle="tab">Escola</a></li>
+    <li><a href="{% url 'usuarios_list' %}" id='escola' data-toggle="tab">Usuário</a></li>
     <li><a href="{% url 'grupos_list' %}" id='escola' data-toggle="tab">Grupos</a></li>
     <li><a href="#classes" data-toggle="tab">Classes</a></li>
     <li><a href="{% url 'professores_list' %}" data-toggle="tab">Professores</a></li>
