--- a/escolar/core/templates/core/usuario_form.html
+++ b/escolar/core/templates/core/usuario_form.html
@@ -2,6 +2,8 @@
 
 {% load bootstrap_toolkit %}
 
+{% block page_title %}Cadastro de Usuário{% endblock page_title %}
+
 {% block content %}
 
 <div class="container">
@@ -14,6 +16,10 @@
             <div class="row-fluid">
                 {{ form.nome|as_bootstrap }}
                 {{ form.email|as_bootstrap }}
+            </div>
+            <div class="row-fluid">
+                {{ form.grupo|as_bootstrap }}
+                {{ form.escola|as_bootstrap }}
             </div>
         </div>
         <div class="form-actions">
