ref #13 cadastra e lista os users, usa get_or_create, baseado no email; precisa de melhorias

--- a/escolar/core/templates/core/usuarios_list.html
+++ b/escolar/core/templates/core/usuarios_list.html
@@ -24,7 +24,7 @@
       <tbody>
       {% for usuario in usuarios %}
         <tr>
-          <td><a href="#">{{ usuario.nome }}</a></td>
+          <td><a href="{% url 'usuario_form' usuario.id %}">{{ usuario.nome }}</a></td>
           <td>
             {{ usuario.email }}
           </td>
