--- a/escolar/escolas/templates/escolas/aluno_form.html
+++ b/escolar/escolas/templates/escolas/aluno_form.html
@@ -2,8 +2,6 @@
 
 {% load bootstrap_toolkit %}
 
-{% block page_title %}Cadastro de Usuário{% endblock page_title %}
-
 {% block content %}
 
 <div class="container">
@@ -14,21 +12,12 @@
     <div class="row-fluid">
         <div class="controls cwell">
             <div class="row-fluid">
-                {{ form.nome|as_bootstrap }}
-                {{ form.email|as_bootstrap }}
-            </div>
-            <div class="row-fluid">
-                {{ form.grupo|as_bootstrap }}
-                {{ form.escola|as_bootstrap }}
-            </div>
-            <div class="row-fluid">
-                {{ form.password1|as_bootstrap }}
-                {{ form.password2|as_bootstrap }}
+                {{ form.name|as_bootstrap }}
             </div>
         </div>
         <div class="form-actions">
             <input type="submit" value="Salvar" class="btn btn-primary">
-            <a href="{% url 'usuarios_list' %}" class="btn btn-secondary">Cancelar</a>
+            <a href="{% url 'grupos_list' %}" class="btn btn-secondary">Cancelar</a>
         </div>
     </div>
 </form>
