ref #14 inicio, acrescenta escolas na nav bar, retira o base_adm da escolas_list

--- a/escolar/core/templates/base.html
+++ b/escolar/core/templates/base.html
@@ -55,7 +55,8 @@
                   <a href="{% url 'login' %}" class="btn">LogIn</a>
                 </form>
               {% else %}
-                <li><a href="{% url 'escolas_list' %}">Administração</a></li>
+                <li><a href="{% url 'grupos_list' %}">Grupos</a></li>
+                <li><a href="{% url 'escolas_list' %}">Escolas</a></li>
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Serviços <b class="caret"></b></a>
                     <ul class="dropdown-menu">
