ref #14 h3 p title; title do form de Escola

--- a/escolar/escolas/templates/escolas/escola_form.html
+++ b/escolar/escolas/templates/escolas/escola_form.html
@@ -2,6 +2,16 @@
 
 {% load bootstrap_toolkit %}
 
+{% block page_title %}
+    {% if escola %}
+        Escola: {{ escola.nome }}
+    {% else %}
+        Cadastro de Escola
+    {% endif %}
+
+{% endblock page_title %}
+
+
 {% block content %}
 
 <div class="container">
