--- a/escolar/core/templates/base_adm.html
+++ b/escolar/core/templates/base_adm.html
@@ -1,7 +1,7 @@
 <ul class="nav nav-tabs">
-    <li><a href="" id='escola' data-toggle="tab">Escola</a></li> 
-    <li><a href="{% url 'usuarios_list' %}" id='escola' data-toggle="tab">Usuários</a></li>
-    <li><a href="#classes" data-toggle="tab">Classes</a></li>
+    <li><a href="#" id='id_escola' data-toggle="tab">Escola</a></li> 
+    <li><a href="{% url 'usuarios_list' escola.id %}" id='id_usuarios' data-toggle="tab">Usuários</a></li>
+    <li><a href="#" id='id_classes' data-toggle="tab">Classes</a></li>
     <li><a href="{% url 'professores_list' %}" data-toggle="tab">Professores</a></li>
     <li><a href="{% url 'alunos_list' %}" data-toggle="tab">Alunos</a></li>
     <li><a href="{% url 'alunos_list' %}" data-toggle="tab">Responsáveis</a></li>
