--- a/escolar/core/templates/core/usuario_form.html
+++ b/escolar/core/templates/core/usuario_form.html
@@ -2,7 +2,13 @@
 
 {% load bootstrap_toolkit %}
 
-{% block page_title %}Cadastro de Usuário{% endblock page_title %}
+{% block page_title %}
+    {% if escola %}
+        Cadastro de Usuários / Escola: {{ escola.nome }}
+    {% else %}
+       Cadastro de Usuários
+    {% endif %}
+{% endblock page_title %}
 
 {% block content %}
 
@@ -28,7 +34,7 @@
         </div>
         <div class="form-actions">
             <input type="submit" value="Salvar" class="btn btn-primary">
-            <a href="{% url 'usuarios_list' %}" class="btn btn-secondary">Cancelar</a>
+            <a href="{% url 'usuarios_list' escola.pk %}" class="btn btn-secondary">Cancelar</a>
         </div>
     </div>
 </form>
