ref #13 o form idt se o usuário é o próprio; para trocar a senha ou editar email. editar o email ocorreu logout; o prórpio user, não troca seu grupo nem escola

--- a/escolar/core/templates/core/usuario_form.html
+++ b/escolar/core/templates/core/usuario_form.html
@@ -16,6 +16,7 @@
    {% include "base_adm.html" %}
 
 <form method="POST" enctype="multipart/form-data">
+    {{ form.errors }}
     {% csrf_token %}
     <div class="row-fluid">
         <div class="controls cwell">
